--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@vercel/speed-insights": "^1.3.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.487.0",
     "motion": "^12.23.24",
