--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/sanitize-html": "^2.16.0",
     "@vercel/speed-insights": "^1.3.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.487.0",
@@ -18,7 +19,8 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-responsive-masonry": "^2.7.1"
+    "react-responsive-masonry": "^2.7.1",
+    "sanitize-html": "^2.17.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
